--- a/app/src/main/res/layout/fragment_contact_us.xml
+++ b/app/src/main/res/layout/fragment_contact_us.xml
@@ -63,8 +63,8 @@
                     android:layout_height="match_parent"
                     android:textSize="20dp"
                     android:layout_marginLeft="20dp"
-                    android:text="MANAGE BOOKING
-\nConfirm a quote - or view, amend or cancel a booking" />
+                    android:text="MANAGE Purchase
+\nConfirm a quote - or view, amend or cancel a Purchase" />
 
             </LinearLayout>
             <LinearLayout
@@ -112,7 +112,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="+1 478 426 ***"
+                    android:text="+1 478 426 5235"
                     android:textSize="20dp"
                     android:textStyle="bold" />
 
