--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -44,7 +44,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="50dp"
                 android:layout_weight="1"
-                android:src="@drawable/pharma" />
+                android:id="@+id/goback"
+                android:src="@drawable/logout" />
 
         </LinearLayout>
 
